fix: tr overflow errors

--- a/classOf2024/src/index.css
+++ b/classOf2024/src/index.css
@@ -33,3 +33,6 @@
   background: #a0aec0ea;
 }
 
+body {
+  overflow-x: hidden;
+}
